fix: homepage alignment and post cards

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 body {
 	font-family: Helvetica, sans-serif;
 	background: slategrey;
-	margin: .5rem;
+	margin: 0.5rem;
 	padding: 0;
 }
 
