--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,6 @@
+main.home .content-wrapper {
+    max-width: 100%;
+}
 .home-columns {
     display: flex;
     flex-direction: column;
@@ -92,10 +95,10 @@
     }
 }
 
-main.home {
+.home-image {
     background-image: url("/mountain-stream.jpg");
-    background-size: contain;
-    background-position: top center;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     // background-color: #ddd;
     width: auto;
@@ -109,11 +112,29 @@ main.home {
     // height: 70vh;
     border-radius: 3px;
     margin-bottom: 3rem;
+    // margin-top: -280px;
+}
+
+.home-who-am-i {
+    margin: -200px auto 0;
+    max-width: 1200px;
+}
+
+.home-posts {
+    width: 1200px;
+    max-width: 1200px;
+    margin: 2rem 0;
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
 }
 
 .home-hero-content {
     display: flex;
-    margin-top: 70vh;
+    // margin-top: 70vh;
+    margin-top: -290px;
+    // margin-bottom: -290px;
     // position: relative;
     // top: 32rem;
     flex-direction: column;
