--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -5,9 +5,10 @@
     grid-gap: 30px;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows: minmax(150px, auto);
+}
 
-    .post-card {
-        max-width: 250px;
+.post-card {
+        // max-width: 250px;
         padding: 1rem 1rem .25rem 1rem;
         border-radius: .25rem;
         box-shadow: 0px 3px 10px #bebebe;
@@ -52,7 +53,6 @@
             }
         }
     }
-}
 
 .post-header {
     h2 {
